include/generated/ffi_m.h

// CLASS: BMessage
void BMessage_delete(BMessage *self);
uint32 BMessage_what(BMessage * self);
void BMessage_set_what(BMessage * self, uint32 what);
status_t BMessage_GetInfo1(const BMessage * self, const char * name, type_code * type_found, int32 * count_found);
status_t BMessage_GetInfo2(const BMessage * self, const char * name, type_code * type_found, bool * fixed_size);
status_t BMessage_GetInfo3(const BMessage * self, const char * name, type_code * type_found, int32 * count_found, bool * fixed_size);
bool BMessage_IsEmpty(const BMessage * self);
bool BMessage_IsSystem(const BMessage * self);
bool BMessage_IsReply(const BMessage * self);
void BMessage_PrintToStream(const BMessage * self);
status_t BMessage_Rename(BMessage * self, const char * old_entry, const char * new_entry);
bool BMessage_WasDelivered(const BMessage * self);
bool BMessage_IsSourceWaiting(const BMessage * self);
bool BMessage_IsSourceRemote(const BMessage * self);
const BMessage * BMessage_Previous(const BMessage * self);
bool BMessage_WasDropped(const BMessage * self);
BPoint *BMessage_DropPoint(const BMessage * self, BPoint * offset);
status_t BMessage_SendReply(BMessage * self, uint32 command, BHandler * reply_to);
status_t BMessage_SendReply1(BMessage * self, BMessage * reply, BHandler * reply_to, bigtime_t timeout);
status_t BMessage_SendReply3(BMessage * self, uint32 command, BMessage * reply_to_reply);
status_t BMessage_SendReply4(BMessage * self, BMessage * reply, BMessage * reply_to_reply, bigtime_t send_timeout, bigtime_t reply_timeout);
status_t BMessage_Flatten1(const BMessage * self, BDataIO * stream, ssize_t * size);
status_t BMessage_Unflatten(BMessage * self, const char * flat_buffer);
status_t BMessage_Unflatten1(BMessage * self, BDataIO * stream);
status_t BMessage_AddSpecifier(BMessage * self, const char * property);
status_t BMessage_AddSpecifier1(BMessage * self, const char * property, int32 index);
status_t BMessage_AddSpecifier2(BMessage * self, const char * property, int32 index, int32 range);
status_t BMessage_AddSpecifier3(BMessage * self, const char * property, const char * name);
status_t BMessage_AddSpecifier4(BMessage * self, const BMessage * specifier);
status_t BMessage_SetCurrentSpecifier(BMessage * self, int32 index);
status_t BMessage_GetCurrentSpecifier(const BMessage * self, int32 * index, BMessage * specifier, int32 * what, const char ** property);
bool BMessage_HasSpecifiers(const BMessage * self);
status_t BMessage_PopSpecifier(BMessage * self);
status_t BMessage_AddAlignment(BMessage * self, const char * name, const BAlignment * alignment);
status_t BMessage_AddRect(BMessage * self, const char * name, BRect* rect);
status_t BMessage_AddPoint(BMessage * self, const char * name, BPoint* point);
status_t BMessage_AddSize(BMessage * self, const char * name, BSize* size);
status_t BMessage_AddString(BMessage * self, const char * name, const char * string);
status_t BMessage_AddString1(BMessage * self, const char * name, const BString * string);
status_t BMessage_AddStrings(BMessage * self, const char * name, const BStringList * list);
status_t BMessage_AddInt8(BMessage * self, const char * name, int8 value);
status_t BMessage_AddUInt8(BMessage * self, const char * name, uint8 value);
status_t BMessage_AddInt16(BMessage * self, const char * name, int16 value);
status_t BMessage_AddUInt16(BMessage * self, const char * name, uint16 value);
status_t BMessage_AddInt32(BMessage * self, const char * name, int32 value);
status_t BMessage_AddUInt32(BMessage * self, const char * name, uint32 value);
status_t BMessage_AddInt64(BMessage * self, const char * name, int64 value);
status_t BMessage_AddUInt64(BMessage * self, const char * name, uint64 value);
status_t BMessage_AddBool(BMessage * self, const char * name, bool value);
status_t BMessage_AddFloat(BMessage * self, const char * name, float value);
status_t BMessage_AddDouble(BMessage * self, const char * name, double value);
status_t BMessage_AddPointer(BMessage * self, const char * name, const void * pointer);
status_t BMessage_AddRef(BMessage * self, const char * name, const entry_ref * ref_);
status_t BMessage_AddNodeRef(BMessage * self, const char * name, const node_ref * ref_);
status_t BMessage_AddMessage(BMessage * self, const char * name, const BMessage * message);
status_t BMessage_AddFlat1(BMessage * self, const char * name, const BFlattenable * object, int32 count);
status_t BMessage_Append(BMessage * self, const BMessage * message);
status_t BMessage_RemoveData(BMessage * self, const char * name, int32 index);
status_t BMessage_RemoveName(BMessage * self, const char * name);
status_t BMessage_MakeEmpty(BMessage * self);
status_t BMessage_FindAlignment(const BMessage * self, const char * name, BAlignment * alignment);
status_t BMessage_FindAlignment1(const BMessage * self, const char * name, int32 index, BAlignment * alignment);
status_t BMessage_FindRect(const BMessage * self, const char * name, BRect * rect);
status_t BMessage_FindRect1(const BMessage * self, const char * name, int32 index, BRect * rect);
status_t BMessage_FindPoint(const BMessage * self, const char * name, BPoint * point);
status_t BMessage_FindPoint1(const BMessage * self, const char * name, int32 index, BPoint * point);
status_t BMessage_FindSize(const BMessage * self, const char * name, BSize * size);
status_t BMessage_FindSize1(const BMessage * self, const char * name, int32 index, BSize * size);
status_t BMessage_FindString(const BMessage * self, const char * name, const char ** string);
status_t BMessage_FindString1(const BMessage * self, const char * name, int32 index, const char ** string);
status_t BMessage_FindString2(const BMessage * self, const char * name, BString * string);
status_t BMessage_FindString3(const BMessage * self, const char * name, int32 index, BString * string);
status_t BMessage_FindStrings(const BMessage * self, const char * name, BStringList * list);
status_t BMessage_FindInt8(const BMessage * self, const char * name, int8 * value);
status_t BMessage_FindInt81(const BMessage * self, const char * name, int32 index, int8 * value);
status_t BMessage_FindUInt8(const BMessage * self, const char * name, uint8 * value);
status_t BMessage_FindUInt81(const BMessage * self, const char * name, int32 index, uint8 * value);
status_t BMessage_FindInt16(const BMessage * self, const char * name, int16 * value);
status_t BMessage_FindInt161(const BMessage * self, const char * name, int32 index, int16 * value);
status_t BMessage_FindUInt16(const BMessage * self, const char * name, uint16 * value);
status_t BMessage_FindUInt161(const BMessage * self, const char * name, int32 index, uint16 * value);
status_t BMessage_FindInt321(const BMessage * self, const char * name, int32 index, int32 * value);
status_t BMessage_FindUInt32(const BMessage * self, const char * name, uint32 * value);
status_t BMessage_FindUInt321(const BMessage * self, const char * name, int32 index, uint32 * value);
status_t BMessage_FindInt64(const BMessage * self, const char * name, int64 * value);
status_t BMessage_FindInt641(const BMessage * self, const char * name, int32 index, int64 * value);
status_t BMessage_FindUInt64(const BMessage * self, const char * name, uint64 * value);
status_t BMessage_FindUInt641(const BMessage * self, const char * name, int32 index, uint64 * value);
status_t BMessage_FindBool(const BMessage * self, const char * name, bool * value);
status_t BMessage_FindBool1(const BMessage * self, const char * name, int32 index, bool * value);
status_t BMessage_FindFloat(const BMessage * self, const char * name, float * value);
status_t BMessage_FindFloat1(const BMessage * self, const char * name, int32 index, float * value);
status_t BMessage_FindDouble(const BMessage * self, const char * name, double * value);
status_t BMessage_FindDouble1(const BMessage * self, const char * name, int32 index, double * value);
status_t BMessage_FindColor(const BMessage * self, const char * name, rgb_color * value);
status_t BMessage_FindColor1(const BMessage * self, const char * name, int32 index, rgb_color * value);
status_t BMessage_FindPointer(const BMessage * self, const char * name, void ** pointer);
status_t BMessage_FindPointer1(const BMessage * self, const char * name, int32 index, void ** pointer);