src/generated/ffi_m.rs


    // BMessage
    pub fn BMessage_delete(self_: *mut c_void);
    pub fn BMessage_what(self_: *mut c_void) -> u32;
    pub fn BMessage_set_what(self_: *mut c_void, what: u32);
    // BLOCKED: pub fn BMessage_operator=(self_: *mut c_void, other: *const c_void) -> *mut c_void;
    // BLOCKED: pub fn BMessage_operator new(self_: *mut c_void, size: usize) -> *mut c_void;
    // BLOCKED: pub fn BMessage_operator new1(self_: *mut c_void, None: usize, pointer: *mut c_void) -> *mut c_void;
    // BLOCKED: pub fn BMessage_operator new2(self_: *mut c_void, None: usize, no_throw: *const c_void) -> *mut c_void;
    // BLOCKED: pub fn BMessage_operator delete(self_: *mut c_void, pointer: *mut c_void, size: usize);
    // NOT_SUPPORTED: pub fn BMessage_GetInfo(self_: *const c_void, type_requested: type_code, index: i32, name_found: *mut c_void, type_found: *mut c_void, count_found: *mut c_void) -> status_t;
    pub fn BMessage_GetInfo1(self_: *const c_void, name: *const c_char, type_found: *mut c_void, count_found: *mut c_void) -> status_t;
    pub fn BMessage_GetInfo2(self_: *const c_void, name: *const c_char, type_found: *mut c_void, fixed_size: *mut c_void) -> status_t;
    pub fn BMessage_GetInfo3(self_: *const c_void, name: *const c_char, type_found: *mut c_void, count_found: *mut c_void, fixed_size: *mut c_void) -> status_t;
    // NOT_SUPPORTED: pub fn BMessage_CountNames(self_: *const c_void, type_: type_code) -> i32;
    pub fn BMessage_IsEmpty(self_: *const c_void) -> bool;
    pub fn BMessage_IsSystem(self_: *const c_void) -> bool;
    pub fn BMessage_IsReply(self_: *const c_void) -> bool;
    pub fn BMessage_PrintToStream(self_: *const c_void);
    pub fn BMessage_Rename(self_: *mut c_void, old_entry: *const c_char, new_entry: *const c_char) -> status_t;
    pub fn BMessage_WasDelivered(self_: *const c_void) -> bool;
    pub fn BMessage_IsSourceWaiting(self_: *const c_void) -> bool;
    pub fn BMessage_IsSourceRemote(self_: *const c_void) -> bool;
    // NOT_SUPPORTED: pub fn BMessage_ReturnAddress(self_: *const c_void) -> BMessenger;
    pub fn BMessage_Previous(self_: *const c_void) -> *mut c_void;
    pub fn BMessage_WasDropped(self_: *const c_void) -> bool;
    pub fn BMessage_DropPoint(self_: *const c_void, offset: *mut c_void) -> *mut c_void;
    pub fn BMessage_SendReply(self_: *mut c_void, command: u32, reply_to: *mut c_void) -> status_t;
    pub fn BMessage_SendReply1(self_: *mut c_void, reply: *mut c_void, reply_to: *mut c_void, timeout: bigtime_t) -> status_t;
    // NOT_SUPPORTED: pub fn BMessage_SendReply2(self_: *mut c_void, reply: *mut c_void, reply_to: BMessenger, timeout: bigtime_t) -> status_t;
    pub fn BMessage_SendReply3(self_: *mut c_void, command: u32, reply_to_reply: *mut c_void) -> status_t;
    pub fn BMessage_SendReply4(self_: *mut c_void, reply: *mut c_void, reply_to_reply: *mut c_void, send_timeout: bigtime_t, reply_timeout: bigtime_t) -> status_t;
    // NOT_SUPPORTED: pub fn BMessage_FlattenedSize(self_: *const c_void) -> ssize_t;
    // NOT_SUPPORTED: pub fn BMessage_Flatten(self_: *const c_void, buffer: *mut c_void, size: ssize_t) -> status_t;
    pub fn BMessage_Flatten1(self_: *const c_void, stream: *mut c_void, size: *mut c_void) -> status_t;
    pub fn BMessage_Unflatten(self_: *mut c_void, flat_buffer: *const c_char) -> status_t;
    pub fn BMessage_Unflatten1(self_: *mut c_void, stream: *mut c_void) -> status_t;
    pub fn BMessage_AddSpecifier(self_: *mut c_void, property: *const c_char) -> status_t;
    pub fn BMessage_AddSpecifier1(self_: *mut c_void, property: *const c_char, index: i32) -> status_t;
    pub fn BMessage_AddSpecifier2(self_: *mut c_void, property: *const c_char, index: i32, range: i32) -> status_t;
    pub fn BMessage_AddSpecifier3(self_: *mut c_void, property: *const c_char, name: *const c_char) -> status_t;
    pub fn BMessage_AddSpecifier4(self_: *mut c_void, specifier: *const c_void) -> status_t;
    pub fn BMessage_SetCurrentSpecifier(self_: *mut c_void, index: i32) -> status_t;
    pub fn BMessage_GetCurrentSpecifier(self_: *const c_void, index: *mut c_void, specifier: *mut c_void, what: *mut c_void, property: *const c_char) -> status_t;
    pub fn BMessage_HasSpecifiers(self_: *const c_void) -> bool;
    pub fn BMessage_PopSpecifier(self_: *mut c_void) -> status_t;
    pub fn BMessage_AddAlignment(self_: *mut c_void, name: *const c_char, alignment: *const c_void) -> status_t;
    pub fn BMessage_AddRect(self_: *mut c_void, name: *const c_char, rect: *mut c_void) -> status_t;
    pub fn BMessage_AddPoint(self_: *mut c_void, name: *const c_char, point: *mut c_void) -> status_t;
    pub fn BMessage_AddSize(self_: *mut c_void, name: *const c_char, size: *mut c_void) -> status_t;
    pub fn BMessage_AddString(self_: *mut c_void, name: *const c_char, string: *const c_char) -> status_t;
    pub fn BMessage_AddString1(self_: *mut c_void, name: *const c_char, string: *const c_void) -> status_t;
    pub fn BMessage_AddStrings(self_: *mut c_void, name: *const c_char, list: *const c_void) -> status_t;
    pub fn BMessage_AddInt8(self_: *mut c_void, name: *const c_char, value: i8) -> status_t;
    pub fn BMessage_AddUInt8(self_: *mut c_void, name: *const c_char, value: u8) -> status_t;
    pub fn BMessage_AddInt16(self_: *mut c_void, name: *const c_char, value: i16) -> status_t;
    pub fn BMessage_AddUInt16(self_: *mut c_void, name: *const c_char, value: u16) -> status_t;
    pub fn BMessage_AddInt32(self_: *mut c_void, name: *const c_char, value: i32) -> status_t;
    pub fn BMessage_AddUInt32(self_: *mut c_void, name: *const c_char, value: u32) -> status_t;
    pub fn BMessage_AddInt64(self_: *mut c_void, name: *const c_char, value: i64) -> status_t;
    pub fn BMessage_AddUInt64(self_: *mut c_void, name: *const c_char, value: u64) -> status_t;
    pub fn BMessage_AddBool(self_: *mut c_void, name: *const c_char, value: bool) -> status_t;
    pub fn BMessage_AddFloat(self_: *mut c_void, name: *const c_char, value: c_float) -> status_t;
    pub fn BMessage_AddDouble(self_: *mut c_void, name: *const c_char, value: c_double) -> status_t;
    // NOT_SUPPORTED: pub fn BMessage_AddColor(self_: *mut c_void, name: *const c_char, value: rgb_color) -> status_t;
    pub fn BMessage_AddPointer(self_: *mut c_void, name: *const c_char, pointer: *const c_void) -> status_t;
    // NOT_SUPPORTED: pub fn BMessage_AddMessenger(self_: *mut c_void, name: *const c_char, messenger: BMessenger) -> status_t;
    pub fn BMessage_AddRef(self_: *mut c_void, name: *const c_char, ref_: *const c_void) -> status_t;
    pub fn BMessage_AddNodeRef(self_: *mut c_void, name: *const c_char, ref_: *const c_void) -> status_t;
    pub fn BMessage_AddMessage(self_: *mut c_void, name: *const c_char, message: *const c_void) -> status_t;
    // BLOCKED: pub fn BMessage_AddFlat(self_: *mut c_void, name: *const c_char, object: *mut c_void, count: i32) -> status_t;
    pub fn BMessage_AddFlat1(self_: *mut c_void, name: *const c_char, object: *const c_void, count: i32) -> status_t;
    // NOT_SUPPORTED: pub fn BMessage_AddData(self_: *mut c_void, name: *const c_char, type_: type_code, data: *const c_void, num_bytes: ssize_t, is_fixed_size: bool, count: i32) -> status_t;
    pub fn BMessage_Append(self_: *mut c_void, message: *const c_void) -> status_t;
    pub fn BMessage_RemoveData(self_: *mut c_void, name: *const c_char, index: i32) -> status_t;
    pub fn BMessage_RemoveName(self_: *mut c_void, name: *const c_char) -> status_t;
    pub fn BMessage_MakeEmpty(self_: *mut c_void) -> status_t;
    pub fn BMessage_FindAlignment(self_: *const c_void, name: *const c_char, alignment: *mut c_void) -> status_t;
    pub fn BMessage_FindAlignment1(self_: *const c_void, name: *const c_char, index: i32, alignment: *mut c_void) -> status_t;
    pub fn BMessage_FindRect(self_: *const c_void, name: *const c_char, rect: *mut c_void) -> status_t;
    pub fn BMessage_FindRect1(self_: *const c_void, name: *const c_char, index: i32, rect: *mut c_void) -> status_t;
    pub fn BMessage_FindPoint(self_: *const c_void, name: *const c_char, point: *mut c_void) -> status_t;
    pub fn BMessage_FindPoint1(self_: *const c_void, name: *const c_char, index: i32, point: *mut c_void) -> status_t;
    pub fn BMessage_FindSize(self_: *const c_void, name: *const c_char, size: *mut c_void) -> status_t;
    pub fn BMessage_FindSize1(self_: *const c_void, name: *const c_char, index: i32, size: *mut c_void) -> status_t;
    pub fn BMessage_FindString(self_: *const c_void, name: *const c_char, string: *const c_char) -> status_t;
    pub fn BMessage_FindString1(self_: *const c_void, name: *const c_char, index: i32, string: *const c_char) -> status_t;
    pub fn BMessage_FindString2(self_: *const c_void, name: *const c_char, string: *mut c_void) -> status_t;
    pub fn BMessage_FindString3(self_: *const c_void, name: *const c_char, index: i32, string: *mut c_void) -> status_t;
    pub fn BMessage_FindStrings(self_: *const c_void, name: *const c_char, list: *mut c_void) -> status_t;
    pub fn BMessage_FindInt8(self_: *const c_void, name: *const c_char, value: *mut c_void) -> status_t;
    pub fn BMessage_FindInt81(self_: *const c_void, name: *const c_char, index: i32, value: *mut c_void) -> status_t;
    pub fn BMessage_FindUInt8(self_: *const c_void, name: *const c_char, value: *mut c_void) -> status_t;
    pub fn BMessage_FindUInt81(self_: *const c_void, name: *const c_char, index: i32, value: *mut c_void) -> status_t;
    pub fn BMessage_FindInt16(self_: *const c_void, name: *const c_char, value: *mut c_void) -> status_t;
    pub fn BMessage_FindInt161(self_: *const c_void, name: *const c_char, index: i32, value: *mut c_void) -> status_t;
    pub fn BMessage_FindUInt16(self_: *const c_void, name: *const c_char, value: *mut c_void) -> status_t;
    pub fn BMessage_FindUInt161(self_: *const c_void, name: *const c_char, index: i32, value: *mut c_void) -> status_t;
    // BLOCKED: pub fn BMessage_FindInt32(self_: *const c_void, name: *const c_char, value: *mut c_void) -> status_t;
    pub fn BMessage_FindInt321(self_: *const c_void, name: *const c_char, index: i32, value: *mut c_void) -> status_t;
    pub fn BMessage_FindUInt32(self_: *const c_void, name: *const c_char, value: *mut c_void) -> status_t;
    pub fn BMessage_FindUInt321(self_: *const c_void, name: *const c_char, index: i32, value: *mut c_void) -> status_t;
    pub fn BMessage_FindInt64(self_: *const c_void, name: *const c_char, value: *mut c_void) -> status_t;
    pub fn BMessage_FindInt641(self_: *const c_void, name: *const c_char, index: i32, value: *mut c_void) -> status_t;
    pub fn BMessage_FindUInt64(self_: *const c_void, name: *const c_char, value: *mut c_void) -> status_t;
    pub fn BMessage_FindUInt641(self_: *const c_void, name: *const c_char, index: i32, value: *mut c_void) -> status_t;
    pub fn BMessage_FindBool(self_: *const c_void, name: *const c_char, value: *mut c_void) -> status_t;
    pub fn BMessage_FindBool1(self_: *const c_void, name: *const c_char, index: i32, value: *mut c_void) -> status_t;
    pub fn BMessage_FindFloat(self_: *const c_void, name: *const c_char, value: *mut c_void) -> status_t;
    pub fn BMessage_FindFloat1(self_: *const c_void, name: *const c_char, index: i32, value: *mut c_void) -> status_t;
    pub fn BMessage_FindDouble(self_: *const c_void, name: *const c_char, value: *mut c_void) -> status_t;
    pub fn BMessage_FindDouble1(self_: *const c_void, name: *const c_char, index: i32, value: *mut c_void) -> status_t;
    pub fn BMessage_FindColor(self_: *const c_void, name: *const c_char, value: *mut c_void) -> status_t;
    pub fn BMessage_FindColor1(self_: *const c_void, name: *const c_char, index: i32, value: *mut c_void) -> status_t;
    pub fn BMessage_FindPointer(self_: *const c_void, name: *const c_char, pointer: *mut c_void) -> status_t;
    pub fn BMessage_FindPointer1(self_: *const c_void, name: *const c_char, index: i32, pointer: *mut c_void) -> status_t;
